# uni-sim

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
agent-sdk/uni_sim/_proto/: uni_pb2.py  uni_pb2_grpc.py
crates/contract/: Cargo.toml  build.rs
crates/contract/src/: lib.rs
crates/engine/: Cargo.toml
crates/gateway/: Cargo.toml
crates/registry/: Cargo.toml
crates/server/: Cargo.toml
docs/: architecture.md  mvp-plan.md  project-summary.md
proto/: uni.proto
