[workspace]
resolver = "3"
members  = [
    "crates/contract",
    "crates/registry",
    "crates/engine",
    "crates/gateway",
    "crates/server",
]

[workspace.package]
# shared metadata every crate inherits via `field.workspace = true`
edition    = "2024"
version    = "0.1.0"
license    = "MIT"
repository = "https://github.com/swstnw/uni-sim"
author ="SwsTnw"  

[workspace.dependencies]
tonic       = "0.14.6"
prost       = "0.14.6"
tonic-build = "0.14.6"  