[workspace]
resolver = "3"
members  = [
    "crates/contract",
    "crates/registry",
    "crates/engine",
    "crates/gateway",
    "crates/server",
]

[workspace.package]
# shared metadata every crate inherits via `field.workspace = true`
edition    = "2024"
version    = "0.1.0"
license    = "MIT"
repository = "https://github.com/swstnw/uni-sim"
# authors ="SwsTnw"  

[workspace.dependencies]
tonic       = "*"
prost       = "0.14.4"
tonic-prost = "*"  
tonic-prost-build = "0.14.6"